--- a/estilo/style.css
+++ b/estilo/style.css
@@ -20,6 +20,7 @@ header>h1 {
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 main header {
@@ -28,24 +29,50 @@ main header {
 
 
 main>section {
-    width: 500px;
-    height: 500px;
+    /* width: 500px;
+    height: 500px; */
     font-family: var(--font-sriracha);
-    text-align: center;
+    /* text-align: center; */
+    font-size: 3.5vw;
+    /* margin: 10px; */
 }
 
 #flor {
-    background-image: url(imagens/background001.jpg);
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: url(../imagens/background001.jpg);
 }
 
+
 #livro {
-    background-image: url(imagens/background002.jpg);
+    background-image: url(../imagens/background002.jpg);
+}
+
+.imagem-fundo {
     background-repeat: no-repeat;
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
+    /* height: 500px; */
+    padding: 10vh 0 ;
+    position: relative;
 }
+
+.transparente{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.514);
+    width: fit-content;
+    margin-left: 30px;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* transform: translateY(-50%); */
+}
+
+footer {
+    background-color: black;
+
+}
+
+footer>p {
+    color: white;
+}
+/* 
+footer>a {} */
